Added FAQ, reorganized pages

--- a/src/templates/developers/developers.html
+++ b/src/templates/developers/developers.html
@@ -1,12 +1,16 @@
 <div class="row">
+
   <div class="col-sm-12 col-lg-3 col-lg-push-1">
+    <div class="m-b"><a ui-sref="beacons.search">&laquo <span class="fa fa-search"></span> Search</a></div>
     <span class="m-r">
+
     <span style="color:rgb(160,122,176)">DEVELOPER RESOURCES</span>
     <ul style="list-style: none; margin:0; padding: 0">
-      <!--<li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.how">How To</a></li>-->
+      <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.how">Development 101</a></li>
       <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.api_beacon">Beacon API</a></li>
       <!--<li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.api_beacon_network">Beacon Network API TD</a></li>-->
-      <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.embed">Embed Beacon</a></li>
+      <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.embed">Beacon Network Widget</a></li>
+      <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.faq">FAQ</a></li>
     </ul>
     </span>
     <span class="clearfix"></span>
