--- a/src/templates/developers/developers_embed.html
+++ b/src/templates/developers/developers_embed.html
@@ -1,12 +1,12 @@
 <div class="section row" ng-controller="BeaconWidgetCtrl">
   <div class="panel">
     <div class="panel-heading">
-      Generate Beacon Widget
+      Generate Beacon Network Widget
     </div>
     <div class="panel-body">
 
       <p>
-        Using the beacon widget, you can display beacon results in your website.
+        Using the beacon widget, you can display Beacon Network results in your website.
       </p>
 
       <div class="panel" ng-init="isDone1 = false">
