--- a/src/templates/developers/developers.html
+++ b/src/templates/developers/developers.html
@@ -8,7 +8,7 @@
     <ul style="list-style: none; margin:0; padding: 0">
       <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.how">Development 101</a></li>
       <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.api_beacon">Beacon API</a></li>
-      <!--<li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.api_beacon_network">Beacon Network API TD</a></li>-->
+      <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.api_beacon_network">Beacon Network Documentation</a></li>
       <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.embed">Beacon Network Widget</a></li>
       <li class="innersidebar-list" ui-sref-active="active"><a ui-sref="developers.faq">FAQ</a></li>
     </ul>
