--- a/src/templates/beacons/beacons_admin.html
+++ b/src/templates/beacons/beacons_admin.html
@@ -8,32 +8,40 @@
         <table class="table" >
 
           <tr class="tableHeaders">
-            <td>
-              Beacon
-            </td>
+            
             <td>Host</td>
+            <td></td>
+            <td>Beacon</td>
+            <td></td>
           </tr>
 
           <tbody ng-repeat="(orgname, datasets) in organizations">
           <tr ng-repeat="dataset in datasets">
 
             <td>
-                <div class="beaconSwitchButton">
-                  <input type="checkbox" checked='beacon.checked' class='{{orgname}}' id='{{dataset.id}}' ng-click="checkOrg($event)">
-                  <label for='{{dataset.id}}'></label>
-                </div>
-                <div class="beaconNameLabel">
-                  <label >{{dataset.name}}</label>
-                </div>
-            </td>
-
-            <td ng-if="$first">
-              <div class="beaconSwitchButton">
+              <div ng-if="$first" class="beaconSwitch">
                 <input class="OnOffSlider" type="checkbox" checked='beacon.checked' id='{{orgname}}' ng-click="checkBeaconsByOrg($event)">
                 <label for='{{orgname}}'></label>
               </div>
-                <div class="orgNameLabel">
+               <div ng-if="$index!=0"></div>
+            </td>
+            <td >
+                <div ng-if="$first" class="orgNameLabel">
                   <label>{{orgname}}</label>
+                </div>
+                <div ng-if="$index!=0"></div>
+            </td>
+
+
+            <td>
+                <div class="beaconSwitch">
+                  <input type="checkbox" checked='beacon.checked' class='{{orgname}}' id='{{dataset.id}}' ng-click="checkOrg($event)">
+                  <label for='{{dataset.id}}'></label>
+                </div>
+            </td>
+            <td>
+                <div class="beaconNameLabel">
+                  <label >{{dataset.name}}</label>
                 </div>
             </td>
 
@@ -43,14 +51,16 @@
 
             <tr>
               <td></td>
+              <td></td>
               <td>
-                <div id="SwitchLabel">
-                  <span>Master Switch</span>
-                </div>        
+
+              </td>
+              <td>
                 <div id="beaconSwitchButton">
                   <input type="checkbox" id="masterSwitch" ng-init="checked=true" ng-checked="getMasterState()" ng-click="switchAll($event)">
                   <label for="masterSwitch"></label>
                 </div>
+                <span id="SwitchLabel">All beacons</span>
               </td>
           </tr>
         </table>
