--- a/src/css/widget/widget.css
+++ b/src/css/widget/widget.css
@@ -13,7 +13,6 @@ body {
     font-size: 18px;
 }
 
-
 /*
 Header is relative so z-index: 1 guarantees always displayed on top
 */
@@ -23,138 +22,21 @@ header {
     text-decoration: none;
     position: fixed;
     width: 100%;
+    height: 25px;
     z-index: 1;
     -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
     box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
 }
 
-/*
-using background color is important to cover the menu
-position absolute isset to cover the whole viewport
-*/
-#content {
-    background-color: #FFFFFF;
-    padding: 52px 10px 10px 10px;
-    position: relative;
-    width: auto;
-    height: 100%;
-    -webkit-box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: -10px 0px 9px 0px rgba(0, 0, 0, 0.4);
-}
-
-/*
-the hamburger button with a little gradient effekt
-*/
-#hamburger {
-    float:left;
-    border: 1px solid #E0E0E0 ;
-    border-radius: 3px 3px 3px 3px;
-    cursor: pointer;
-    display: block;
-    height: 24px;
-    padding: 3px 4px 3px;
-    position: relative;
-    width: 25px;
-    background: #484848;
-}
-
-#hamburger:hover{
-    background-color: black;
-}
-
-/*
-The white stripes in the hamburger button
-*/
-#hamburger div {
-    background-color: #fff;
-    border: 1px solid #eee;
-    border-radius: 2px 2px 2px 2px;
-    height: 2px;
-    margin-top: 3px;
-    width: 90%;
-}
-
-
-
-/*
-The navigation container in the background
-*/
-nav {
-    opacity: 0;
-    left: 0px;
-    top: 0px;
-    position: fixed;
-    z-index: 0;
-    width: 30%;
-    height: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    overflow-y: auto;
-    background: #3e3c3d;
-    background: -moz-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3e3c3d), color-stop(100%, #2d2c2d));
-    background: -webkit-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -o-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: -ms-linear-gradient(top, #3e3c3d 0%, #2d2c2d 100%);
-    background: linear-gradient(to bottom, #3e3c3d 0%, #2d2c2d 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e3c3d', endColorstr='#2d2c2d', GradientType=0);
-}
-
-/*
-Style the navigation menu
-*/
-nav ul {
-    list-style: none;
-    margin: 0;
-    width: 100%;
-    padding: 0;
-}
-
-nav li {
-    position: relative;
-    font-size: 1em;
-    font-weight: bold;
-    border-bottom: 1px solid #222222;
-    border-top: 1px solid #444444;
-    padding: 15px;
-}
-
-nav li:hover{
-    background-color: #484848;
-}
-
-nav li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-/*
-The Layer that will be layed over the content
-so that the content is unclickable while menu is shown
-*/
-#contentLayer {
-    display: none;
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 70%;
-    z-index: 5;
-}
-
 #pageTitle {
     position: fixed;
-    width: 70%;
-    left: 30%;
-    font-size:25px;
+    width: 100%;
+    font-size:30px;
     color: white;
     text-align: center;
-}
+    font-family: monospace;
 
+}
 
 @media screen and (max-width: 400px) {
     #content {
@@ -172,22 +54,22 @@ so that the content is unclickable while menu is shown
 
 #queryParam {
     font-size:20px;
-    padding: 20px;
+    padding: 10px;
+    padding-top: 60px;
     text-align: center;
-
     background-color: rgba(255,255,255,0.5);
 }
 
 #queryParam span {
-    padding: 20px;
+    padding: 10px;
 }
 
 
 #beaconResults {
     padding: 20px;
-    padding-top: 55px;
+    padding-top: 0px;
     margin:auto;
-    width:60%;
+    width:80%;
     font-family: "inherit";
 }
 table#beaconResults h2{
@@ -212,7 +94,6 @@ td.response div{
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px; 
-    color: yellow;
 }
 
 div.redDot{
@@ -220,4 +101,101 @@ div.redDot{
 }
 div.greenDot{
     background: green;
+}
+div.orangeDot{
+    background: orange;
+}
+
+.redDot:hover:after{
+    border-radius: 5px;
+    bottom: 26px;
+    color: black;
+    content: "No";
+    left: 20%;
+    padding: 10px 15px;
+    position: relative;
+    z-index: 98;
+    width: 220px;
+}
+
+.greenDot:hover:after{
+    border-radius: 5px;
+    bottom: 26px;
+    color: black;
+    content: "Yes";
+    left: 20%;
+    padding: 10px 15px;
+    position: relative;
+    z-index: 98;
+    width: 220px;
+}
+
+.orangeDot:hover:after{
+    border-radius: 5px;
+    bottom: 26px;
+    color: black;
+    content: "Error";
+    left: 20%;
+    padding: 10px 15px;
+    position: relative;
+    z-index: 98;
+    width: 220px;
+}
+
+footer{
+    background-color: #484848;
+    padding: 10px;
+    text-decoration: none;
+    width: 100%;
+    z-index: 1;
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.4);
+}
+
+#bobInfo{
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+}
+
+#bobInfo a{
+    font-size:20px;
+    color: white;
+    text-align: center;
+    padding:10px;
+    text-decoration: none;
+    position:relative;
+    font-family: monospace;
+}
+
+
+#bobInfo a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+#bobInfo a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+#loading {
+   width: 100%;
+   height: 100%;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
 }
