--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -245,14 +245,6 @@ tr td {
 }
 
 
-/*
-    Switches that Miro like better 
-*/
-
-.onOffSwitch input[type=checkbox]{
-    visibility: hidden;
-}
-
 
 /* Positioning and fonts of the labels */
 .beaconNameLabel label{
@@ -416,4 +408,18 @@ tr td {
     font-size: 20px;
     padding: 22px;
 
+}
+
+/* tooltip */ 
+.aggregator-icon:hover:after {
+    border-radius: 5px;
+    color: #312D2D;
+    background: #EBE6E6;
+    content: "Aggregator: the beacon does not serve any datasets on its own; it aggregates the data of other beacons.";
+    padding: 5px 5px;
+    position: absolute;
+    z-index: 98;
+    width: auto;
+    max-width: 200px;
+    min-width: 200px;
 }
