Added a d3 bar chart for response breakdown
- Implemented a d3 component as an angular directive
- Changed the height adjustment and additional styling

--- a/src/css/widget.css
+++ b/src/css/widget.css
@@ -198,3 +198,11 @@ footer{
    z-index: 99;
    text-align: center;
 }
+
+.barchart{
+    width:500px;
+    height:90px;
+    display:block;
+    margin:auto;
+    margin-top: 10px
+}
