--- a/src/css/widget.css
+++ b/src/css/widget.css
@@ -10,8 +10,8 @@ body {
     padding: 0;
     overflow-x: hidden;
     font-family: Arial;
-    font-size: 18px;
 }
+
 
 /*
 Header is relative so z-index: 1 guarantees always displayed on top
@@ -38,9 +38,11 @@ header {
 
 }
 
+/* Adjust fontsize based on window size */ 
+
 @media screen and (max-width: 400px) {
     #content {
-        font-size: 10px;
+        font-size: 12px;
     }
 }
 
@@ -53,7 +55,7 @@ header {
 /* Customizing content styles */ 
 
 #queryParam {
-    font-size:20px;
+    font-size:18px;
     padding: 10px;
     padding-top: 60px;
     text-align: center;
@@ -200,9 +202,8 @@ footer{
 }
 
 .barchart{
-    width:500px;
+    width:100%;
     height:90px;
     display:block;
-    margin:auto;
     margin-top: 10px
 }
