--- a/src/css/widget.css
+++ b/src/css/widget.css
@@ -18,7 +18,8 @@ Header is relative so z-index: 1 guarantees always displayed on top
 */
 header {
     background-color: #484848;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     text-decoration: none;
     position: fixed;
     width: 100%;
@@ -35,20 +36,14 @@ header {
     color: white;
     text-align: center;
     font-family: monospace;
-
 }
 
-/* Adjust fontsize based on window size */ 
-
-@media screen and (max-width: 400px) {
-    #content {
-        font-size: 12px;
+@media screen and (max-width: 340px) {
+    #pageTitle {
+        font-size: 24px;
     }
-}
-
-@media screen and (max-width: 500px) {
-    pageTitle {
-        font-size: 17px;
+    h2{
+        font-size:20px;
     }
 }
 
@@ -57,28 +52,53 @@ header {
 #queryParam {
     font-size:18px;
     padding: 10px;
-    padding-top: 60px;
+    margin-top: 50px;
     text-align: center;
     background-color: rgba(255,255,255,0.5);
+    font-family: monospace;
 }
 
-#queryParam span {
+#queryParam div {
     padding: 10px;
 }
 
 
+#loading {
+   width: 100%;
+   height: 100%;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
+
+.barchart{
+    width:100%;
+    height:90px;
+    display:block;
+    margin-top: 10px
+}
+
+
 #beaconResults {
-    padding: 20px;
+    padding: 25px;
     padding-top: 0px;
     margin:auto;
-    width:80%;
     font-family: "inherit";
 }
+
 table#beaconResults h2{
-    color: rgb(77, 99, 114);
+    color: black;
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 table#beaconResults small{
-   color: rgb(77, 91, 93);
+    color: rgb(77, 91, 93);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 18px;
 }
 tr.beaconResult td{
     border-bottom: 1px solid #AFB4B7;
@@ -91,8 +111,8 @@ tr.beaconResult td:last-child{
 }
 
 td.response div{
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     border-radius: 25px; 
@@ -191,19 +211,3 @@ footer{
   transform: scaleX(1);
 }
 
-#loading {
-   width: 100%;
-   height: 100%;
-   display: block;
-   opacity: 0.7;
-   background-color: #fff;
-   z-index: 99;
-   text-align: center;
-}
-
-.barchart{
-    width:100%;
-    height:90px;
-    display:block;
-    margin-top: 10px
-}
