Small format and layout changes
- Renamed beacon switch controller file
- Organized css
- Formatted home page and fixed a typo

--- a/src/templates/admins/admins_home.html
+++ b/src/templates/admins/admins_home.html
@@ -2,7 +2,7 @@
 <div class="jumbotron">
   <div class="container">
     <h1>Admin Beacon Console</h1>
-    <p>As a previledge user, you can control beacons, look at query history, and inspect their performance, and more! Have fun!</p>
+    <p>As a priviledged user, you can control beacons, look at query history, and inspect their performance, and more! Have fun!</p>
   </div>
 </div> 
 
