--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -1,11 +1,3 @@
-.variantsPanel{
-	padding-left: 0px;
-}
-
-.beaconsPanel{
-	padding-right: 0px;
-}
-
 
 /* Admin homepage  */ 
 .admin-menu h2{
@@ -50,3 +42,13 @@ h2.title{
 	color: rgb(84, 133, 133);
 }
 
+
+/* Beacon performance page */ 
+
+.variantsPanel{
+	padding-left: 0px;
+}
+
+.beaconsPanel{
+	padding-right: 0px;
+}
