Fixed d3 rendering issue in Firefox

--- a/src/templates/admins/admins_performance.html
+++ b/src/templates/admins/admins_performance.html
@@ -10,7 +10,7 @@
     <div ng-repeat="(key, beacon) in summary">
       <donut data="beacon.nResponse" nquery="beacon.nQuery" name="key" colors="colors"></donut>
     </div> 
-
+    <md-button class="md-raised">button</md-button>
     </div>
   </div>
 </div>
