--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -56,3 +56,52 @@ h2.title{
 svg{
 	margin: 2em;
 }
+
+
+.beacon-chips .md-chip {
+	position: relative;
+	padding-right: 35px; 
+}
+.beacon-chips .md-chip .md-chip-remove-container {
+	position: absolute;
+	right: 4px;
+	top: 4px;
+	margin-right: 0;
+	height: 24px; 
+}
+.beacon-chips .md-chip .md-chip-remove-container button.beaconchip {
+	position: relative;
+	height: 24px;
+	width: 24px;
+	line-height: 30px;
+	text-align: center;
+	background: rgba(0, 0, 0, 0.3);
+	border-radius: 50%;
+	border: none;
+	box-shadow: none;
+	padding: 0;
+	margin: 0;
+	transition: background 0.15s linear;
+	display: block; 
+}
+.beacon-chips .md-chip .md-chip-remove-container button.beaconchip md-icon {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate3d(-50%, -50%, 0) scale(0.7);
+	color: white;
+	fill: white; 
+}
+.beacon-chips .md-chip .md-chip-remove-container button.beaconchip:hover, .beacon-chips .md-chip .md-chip-remove-container button.beaconchip:focus {
+	background: rgba(180, 0, 0, 0.7); 
+}
+
+
+.searchBar{
+	margin: 30px;
+}
+
+.searchBar button{
+	color: rgb(224, 224, 224);
+	line-height: 0em;
+}
