--- a/src/templates/admins/admins_performance.html
+++ b/src/templates/admins/admins_performance.html
@@ -38,6 +38,10 @@
     <div ng-repeat="(key, beacon) in summary">
       <donut data="beacon.nResponse" nquery="beacon.nQuery" name="key" colors="colors"></donut>
     </div> 
+
+    <label><input type="checkbox"> Sort </label>
+    <histogram data="data"></histogram> 
+
     <md-button class="md-raised">button</md-button>
     </div>
   </div>
