--- a/src/templates/admins/admins_performance.html
+++ b/src/templates/admins/admins_performance.html
@@ -16,7 +16,7 @@
           md-search-text="searchText"
           md-items="item in querySearch(searchText)"
           md-item-text="item.name"
-          placeholder="Search for beacons">
+          placeholder={{searchBarText}}>
         <span md-highlight-text="searchText">{{item.name}} :: {{item.organization.id}}</span>
       </md-autocomplete>
       <md-chip-template>
@@ -25,7 +25,7 @@
           <em>({{$chip.organization.id}})</em>
         </span>
       </md-chip-template>
-      <button md-chip-remove="" class="md-primary beaconchip">
+      <button md-chip-remove="" class="md-primary beaconchip" style="line-height: 0em;">
         <i class="fa fa-times"></i>
       </button>
 
