Improved UI for beacon performance histogram
- Added fake data to simulate realtime update
- Implemented Ajax calls that will be read into the histogram once real backend is implemented
- Added dropdown menu selector
- Included update status to show the number of beacons loaded

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -57,10 +57,23 @@ svg{
 	margin: 2em;
 }
 
-.sortButton{
+.sortButton, .dataButton{
 	float: right;
 }
 
+.status {
+	float: left;
+	padding-left: 15px;
+	font-size: 20px;
+	color: "#BBAAAA";
+}
+
+.display-option{
+	float: left;
+	padding-left: 15px;
+	font-size: 20px;
+	margin-top: -20px;
+}
 .beacon-chips .md-chip {
 	position: relative;
 	padding-right: 35px; 
