fixed a typo in terms of use

--- a/src/templates/terms.html
+++ b/src/templates/terms.html
@@ -10,7 +10,7 @@
 
     <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service, either through the web interface or through its Application Programming Interface (API).</p>
 
-    <p><strong>Prohobited Uses</strong></p>
+    <p><strong>Prohibited Uses</strong></p>
 
     <p>The Service is provided as a benefit and is intended to provide a valuable and useful tool for promoting openness and collaboration between individuals, research communities, industry, public bodies and other stakeholders interested in developing the future of personal genomics technologies and practices.  It is not intended for any illegal or other inappropriate uses, and you agree to use the Service only in a manner that is consistent with the mission of beacon-network.org.  Among other things, this means that you agree not to use the Service to:</p>
 
